test/classes/delete-free/borrowed/borrowed-array.good
borrowed-array.chpl:2: error: cannot make [domain(1,int(64),false)] real(64) into a borrowed class
borrowed-array.chpl:2: error: cannot make [domain(1,int(64),false)] real(64) into a borrowed class
